--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>O objetivo é de melhorar e praticar a lógica de programação utilizando a linguagem pura, sem uso de bibliotecas ou frameworks. Escolha algum abaixo e confira:</p>
   <br>
   <ol>
-    <li><a href="./01-javascript_drum_kit/drum.html">JavaScript Drum</a></li>
+    <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
   </ol>
 </body>
 </html>
