projeto relógio adicionado

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
   <title>Desafios - JavaScript</title>
 </head>
 <body>
-  <h1>Desafios JavaScript</h1>
-  <h2>Sobre:</h2>
-  <p>Olá, este é meu repositório de desafios concluídos do site: <a href="https://javascript30.com" target="_blank">javascript30.com</a></p>
-  <p>O objetivo é de melhorar e praticar a lógica de programação utilizando a linguagem pura, sem uso de bibliotecas ou frameworks. Escolha algum abaixo e confira:</p>
-  <br>
-  <ol>
-    <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
-  </ol>
+  <header class="cabecalho">
+    <h1>Desafios JavaScript</h1>
+  </header>
+  <div class="container">
+    <h2>Sobre:</h2>
+    <p>Olá, este é meu repositório de desafios concluídos do site: <a href="https://javascript30.com" target="_blank">javascript30.com</a></p>
+    <p>O objetivo é de melhorar e praticar a lógica de programação utilizando a linguagem pura, sem uso de bibliotecas ou frameworks. Escolha algum abaixo e confira:</p>
+    <br>
+    <ol>
+      <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
+      <li><a href="02-clock/index.html" target="_blank">Relógio JavaScript</a></li>
+    </ol>
+  </div>
 </body>
 </html>
