--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ol>
       <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
       <li><a href="02-clock/index.html" target="_blank">Relógio JavaScript</a></li>
+      <li><a href="03-css-variables/index.html">Manipulação de variáveis CSS</a></li>
     </ol>
   </div>
 </body>
