adicionado links para projetos 4 e 5

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <ol>
       <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
       <li><a href="02-clock/index.html" target="_blank">Relógio JavaScript</a></li>
-      <li><a href="03-css-variables/index.html">Manipulação de variáveis CSS</a></li>
+      <li><a href="03-css-variables/index.html" target="_blank">Manipulação de variáveis CSS</a></li>
+      <li><a href="04-arrays/index.html">Exercícios de manipulação de Arrays</a></li>
+      <li><a href="05-flex_gallery/index.html">Flex Gallery</a></li>
     </ol>
   </div>
 </body>
