--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="03-css-variables/index.html" target="_blank">Manipulação de variáveis CSS</a></li>
       <li><a href="04-arrays/index.html">Exercícios de manipulação de Arrays</a></li>
       <li><a href="05-flex_gallery/index.html">Flex Gallery</a></li>
+      <li><a href="06 - Type Ahead/index.html" target="_blank">População por Estado</a></li>
     </ol>
   </div>
 </body>
