ajustes no design

--- a/06 - populacao_por_estado/index.html
+++ b/06 - populacao_por_estado/index.html
@@ -15,6 +15,7 @@
       <form class="busca-form">
         <label for="busca">Estado:</label>
         <select name="estados" id="estados" class="busca">
+          <option value="" class="empty"></option>
           <option value="Acre">Acre</option>
           <option value="Alagoas">Alagoas</option>
           <option value="Amapá">Amapá</option>
