--- a/07-arrays_2/arrays2.html
+++ b/07-arrays_2/arrays2.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>Array Cardio 💪</title>
+  <title>Array Cardio 💪💪</title>
 </head>
 <body>
   <h1>Arrays</h1>
@@ -11,26 +11,11 @@
   <p style="margin-top: 6px;">Segue abaixo os exercícios, para ver as respostas olhe no console do navegador:</p>
 
   <ol>
-    <li>Array.prototype.filter()
-      <br>
-     Filter the list of inventors for those who were born in the 1500's</li>
-    <li>Array.prototype.map()
-      <br>
-      Give us an array of the inventors first and last names</li>
-    <li>Array.prototype.sort()
-      <br>
-      Sort the inventors by birthdate, oldest to youngest</li>
-    <li>Array.prototype.reduce()
-      <br>
-      How many years did all the inventors live all together?</li>
-    <li>Sort the inventors by years lived</li>
-    <li>sort Exercise
-      <br>
-      Sort the people alphabetically by last name
-      </li>
-    <li>Reduce Exercise
-      <br>
-      Sum up the instances of each of these</li>
+    <li>Array.prototype.some() // is at least one person 19 or older?</li>
+    <li>Array.prototype.every() // is everyone 19 or older?</li>
+    <li>Find is like filter, but instead returns just the one you are looking for
+    find the comment with the ID of 823423</li>
+    <li>Find the comment with this ID delete the comment with the ID of 823423</li>
   </ol>
 
   <style>
@@ -58,7 +43,6 @@
       margin-bottom: 10px;
     }
   </style>
-
 
   <script src="script.js"></script>
 </body>
