--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <li><a href="./01-javascript_drum_kit/drum.html" target="_blank">JavaScript Drum</a></li>
       <li><a href="02-clock/index.html" target="_blank">Relógio JavaScript</a></li>
       <li><a href="03-css-variables/index.html" target="_blank">Manipulação de variáveis CSS</a></li>
-      <li><a href="04-arrays/index.html">Exercícios de manipulação de Arrays</a></li>
-      <li><a href="05-flex_gallery/index.html">Flex Gallery</a></li>
+      <li><a href="04-arrays/index.html" target="_blank">Exercícios de Arrays</a></li>
+      <li><a href="05-flex_gallery/index.html" target="_blank">Flex Gallery</a></li>
       <li><a href="06-populacao_por_estado/index.html" target="_blank">População por Estado</a></li>
+      <li><a href="07-arrays_2/index.html" target="_blank">Exercícios de Arrays 2</a></li>
     </ol>
   </div>
 </body>
