concertado link projeto canvas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="05-flex_gallery/index.html" target="_blank">Flex Gallery</a></li>
       <li><a href="06-populacao_por_estado/index.html" target="_blank">População por Estado</a></li>
       <li><a href="07-arrays_2/index.html" target="_blank">Exercícios de Arrays 2</a></li>
-      <li><a href="08-fun_with_html_canvas/" target="_blank">HTML Canvas</a></li>
+      <li><a href="08-fun_with_html_canvas/index.html" target="_blank">HTML Canvas</a></li>
     </ol>
   </div>
 </body>
