adicionado paragrafo ao projeto canvas

--- a/08-fun_with_html_canvas/index.html
+++ b/08-fun_with_html_canvas/index.html
@@ -6,7 +6,8 @@
   <title>HTML5 Canvas</title>
 </head>
 <body>
-<canvas id="draw">Desenhe aqui 😉👇</canvas>
+  <p>Desenhe aqui 😉👇</p>
+<canvas id="draw"></canvas>
 
 <style>
   html, body {
