--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="06-populacao_por_estado/index.html" target="_blank">População por Estado</a></li>
       <li><a href="07-arrays_2/index.html" target="_blank">Exercícios de Arrays 2</a></li>
       <li><a href="08-fun_with_html_canvas/index.html" target="_blank">HTML Canvas</a></li>
+      <li><a href="10-hold_shift_and_check_checkboxes/index.html" target="_blank">CheckBoxes</a></li>
     </ol>
   </div>
 </body>
