adicionado link do projeto 11

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="07-arrays_2/index.html" target="_blank">Exercícios de Arrays 2</a></li>
       <li><a href="08-fun_with_html_canvas/index.html" target="_blank">HTML Canvas</a></li>
       <li><a href="10-hold_shift_and_check_checkboxes/index.html" target="_blank">CheckBoxes</a></li>
+      <li><a href="11-custom_video_player/index.html" target="_blank">Vídeo Player Customizado</a></li>
     </ol>
   </div>
 </body>
