--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="08-fun_with_html_canvas/index.html" target="_blank">HTML Canvas</a></li>
       <li><a href="10-hold_shift_and_check_checkboxes/index.html" target="_blank">CheckBoxes</a></li>
       <li><a href="11-custom_video_player/index.html" target="_blank">Vídeo Player Customizado</a></li>
+      <li><a href="12-key_sequence_detection/index.html" target="_blank">Detector de tecla</a></li>
     </ol>
   </div>
 </body>
