--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="10-hold_shift_and_check_checkboxes/index.html" target="_blank">CheckBoxes</a></li>
       <li><a href="11-custom_video_player/index.html" target="_blank">Vídeo Player Customizado</a></li>
       <li><a href="12-key_sequence_detection/index.html" target="_blank">Detector de tecla</a></li>
+      <li><a href="13-slide_on_scroll/index.html">Slide on Scroll</a></li>
     </ol>
   </div>
 </body>
