--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="11-custom_video_player/index.html" target="_blank">Vídeo Player Customizado</a></li>
       <li><a href="12-key_sequence_detection/index.html" target="_blank">Detector de tecla</a></li>
       <li><a href="13-slide_on_scroll/index.html">Slide on Scroll</a></li>
+      <li><a href="15-localstorage/index.html">Itens LocalStorage</a></li>
     </ol>
   </div>
 </body>
