--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="12-key_sequence_detection/index.html" target="_blank">Detector de tecla</a></li>
       <li><a href="13-slide_on_scroll/index.html">Slide on Scroll</a></li>
       <li><a href="15-localstorage/index.html">Itens LocalStorage</a></li>
+      <li><a href="16-mouse_move_shadow/index.html">Sombra com movimento</a></li>
     </ol>
   </div>
 </body>
