--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="13-slide_on_scroll/index.html">Slide on Scroll</a></li>
       <li><a href="15-localstorage/index.html">Itens LocalStorage</a></li>
       <li><a href="16-mouse_move_shadow/index.html">Sombra com movimento</a></li>
+      <li><a href="17-sort_without_articles/index.html">Sort Lista de bandas</a></li>
     </ol>
   </div>
 </body>
