projeto tempo total de videos

--- a/18-adding_up_times_with_reduce/index-START.html
+++ b/18-adding_up_times_with_reduce/index-START.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>Videos</title>
+  <title>Videos - Tempo Total</title>
 </head>
-<body>
+<body style="background-color: aliceblue;">
+  <p>Neste projeto é mostrado o tempo total de duração dos vídeos, para cada vídeo existe um datase de seu tempo.
+  </p>
+  <p>Nó código Javascript pega-se o valor de cada vídeo e soma os valores usando ".reduce()". Depois o valor é convertido em horas, minutos e segundos.</p>
   <ul class="videos">
     <li data-time="5:43">
       Video 1
@@ -181,7 +185,7 @@
       Video 58
     </li>
   </ul>
-<script>
-</script>
+
+  <script src="script.js"></script>
 </body>
 </html>
