--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="15-localstorage/index.html">Itens LocalStorage</a></li>
       <li><a href="16-mouse_move_shadow/index.html">Sombra com movimento</a></li>
       <li><a href="17-sort_without_articles/index.html">Sort Lista de bandas</a></li>
+      <li><a href="18-adding_up_times_with_reduce/index.html">Adicionando tempo com .reduce()</a></li>
     </ol>
   </div>
 </body>
