--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="16-mouse_move_shadow/index.html">Sombra com movimento</a></li>
       <li><a href="17-sort_without_articles/index.html">Sort Lista de bandas</a></li>
       <li><a href="18-adding_up_times_with_reduce/index.html">Adicionando tempo com .reduce()</a></li>
+      <li><a href="20-speech_detection/index.html">Detector de fala</a></li>
     </ol>
   </div>
 </body>
