--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li><a href="17-sort_without_articles/index.html">Sort Lista de bandas</a></li>
       <li><a href="18-adding_up_times_with_reduce/index.html">Adicionando tempo com .reduce()</a></li>
       <li><a href="22-follow_along_link_highlighter/index.html">Destaque seguindo navegação</a></li>
+      <li><a href="23-speech_synthesis/index.html">Voiceinator</a></li>
     </ol>
   </div>
 </body>
