adicao link projeto 24

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li><a href="18-adding_up_times_with_reduce/index.html">Adicionando tempo com .reduce()</a></li>
       <li><a href="22-follow_along_link_highlighter/index.html">Destaque seguindo navegação</a></li>
       <li><a href="23-speech_synthesis/index.html">Voiceinator</a></li>
+      <li><a href="24-sticky_nav/index.html">Sticky Nav</a></li>
     </ol>
   </div>
 </body>
