corrigido link projeto 20

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li><a href="22-follow_along_link_highlighter/index.html">Destaque seguindo navegação</a></li>
       <li><a href="23-speech_synthesis/index.html">Voiceinator</a></li>
       <li><a href="24-sticky_nav/index.html">Sticky Nav</a></li>
-      <li><a href="26-sticky_nav/index.html">Div Following Nav</a></li>
+      <li><a href="26-stripe-follow-along-nav/index.html">Div Following Nav</a></li>
     </ol>
   </div>
 </body>
