--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li><a href="23-speech_synthesis/index.html">Voiceinator</a></li>
       <li><a href="24-sticky_nav/index.html">Sticky Nav</a></li>
       <li><a href="26-stripe-follow-along-nav/index.html">Div Following Nav</a></li>
+      <li><a href="27-click-and-drag/index.html">Click and drag</a></li>
     </ol>
   </div>
 </body>
