--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="24-sticky_nav/index.html">Sticky Nav</a></li>
       <li><a href="26-stripe-follow-along-nav/index.html">Div Following Nav</a></li>
       <li><a href="27-click-and-drag/index.html">Click and drag</a></li>
+      <li><a href="28-video-speed-controller/index.html"></a>Barra de velocidade customizada</li>
     </ol>
   </div>
 </body>
