--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li><a href="26-stripe-follow-along-nav/index.html">Div Following Nav</a></li>
       <li><a href="27-click-and-drag/index.html">Click and drag</a></li>
       <li><a href="28-video-speed-controller/index.html"></a>Barra de velocidade customizada</li>
+      <li><a href="29-countdown-timer/index.html">Cronômetro</a></li>
     </ol>
   </div>
 </body>
