projeto-acerte-a-toupeira

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <li><a href="27-click-and-drag/index.html">Click and drag</a></li>
       <li><a href="28-video-speed-controller/index.html"></a>Barra de velocidade customizada</li>
       <li><a href="29-countdown-timer/index.html">Cronômetro</a></li>
+      <li><a href="30-whack-a-mole/index.html"></a>Acerte a toupeira</li>
     </ol>
   </div>
 </body>
