concertado-erro-de-link

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <li><a href="24-sticky_nav/index.html">Sticky Nav</a></li>
       <li><a href="26-stripe-follow-along-nav/index.html">Div Following Nav</a></li>
       <li><a href="27-click-and-drag/index.html">Click and drag</a></li>
-      <li><a href="28-video-speed-controller/index.html"></a>Barra de velocidade customizada</li>
+      <li><a href="28-video-speed-controller/index.html">Barra de velocidade customizada</a></li>
       <li><a href="29-countdown-timer/index.html">Cronômetro</a></li>
-      <li><a href="30-whack-a-mole/index.html"></a>Acerte a toupeira</li>
+      <li><a href="30-whack-a-mole/index.html">Acerte a toupeira</a></li>
     </ol>
   </div>
 </body>
